# GAMES101

./: CMakeLists.txt  CmakeLists.txt  ReadMe.md  clear.bat  codeBbuild.bat  run.bat
Assignment0/: CMakeLists.txt  main.cpp
Assignment1/: CMakeLists.txt  RotateMatrix.md  main.cpp
Assignment2/: CMakeLists.txt
Assignment2/src/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: CMakeLists.txt
Assignment3/Code/: Texture.hpp  main.cpp  rasterizer.cpp
Assignment4/: CMakeLists.txt  main.cpp
Assignment5/: CMakeLists.txt
Assignment5/Code/: Renderer.cpp  Triangle.hpp
Assignment6/: CMakeLists.txt
Assignment6/Code/: BVH.cpp  Bounds3.hpp  Object.hpp  Renderer.cpp  Triangle.hpp  Vector.hpp  main.cpp
Assignment7/: CMakeLists.txt
Assignment7/Code/: BVH.cpp  Bounds3.hpp  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
Assignment8/src/: rope.cpp
Test/: CmakeLists.txt  EigenUse.md  testEigen.cpp
